--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="assets/css/main.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.google.com/specimen/Montserrat?query=montserrat" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Montserrat?query=montserrat" rel="main.css">
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
